[gd_scene load_steps=2 format=3 uid="uid://settings_ui_001"]

[ext_resource type="Script" path="res://scripts/settings_ui.gd" id="1_settings"]

[node name="SettingsUi" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="MusicRow" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MusicLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/MusicRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/MusicRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
step = 1.0
value = 100.0

[node name="SFXRow" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SFXLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/SFXRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/SFXRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
step = 1.0
value = 70.0

[node name="ResumeButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"
